fix: Add one more step for align context size change check

--- a/examples/case.less
+++ b/examples/case.less
@@ -1,3 +1,7 @@
+.rc-trigger-popup-placement-right {
+  border-width: 10px!important;
+}
+
 // ======================= Popup =======================
 .case-motion {
   transform-origin: 50% 50%;
